# jitsi-meet-transcoder

./: .gitignore  Dockerfile  Jenkinsfile  README.md
rust-webserver/: 1.09.57.110966000-gst-launch.PLAYING_PAUSED.dot  1.09.57.119936000-gst-launch.PAUSED_READY.dot  Cargo.toml  dump.rdb  rclone.sh  session-initiate.dot  xyz.flv
rust-webserver/src/: main.rs
rust-webserver/src/middlewares/: auth.rs
rust-webserver/src/repositories/: mod.rs
rust-webserver/src/repositories/user_repository/: mod.rs  routes.rs
streaming-service-bridge/: Cargo.toml
streaming-service-bridge/gst-meet/src/: main.rs
streaming-service-bridge/jitsi-xmpp-parsers/: Cargo.toml
streaming-service-bridge/lib-gst-meet/: Cargo.toml
streaming-service-bridge/lib-gst-meet-c/include/: gstmeet.h
streaming-service-bridge/lib-gst-meet-c/src/: lib.rs
streaming-service-bridge/lib-gst-meet/src/: conference.rs  jingle.rs
streaming-service-bridge/lib-gst-meet/src/xmpp/: connection.rs  ns.rs
