[package]
name = "actix-web-docker-example"
version = "0.1.0"
authors = ["Patrick Fitzgerald <paddyfitz@gmail.com>"]
edition = "2018"

[dependencies]

# actix
actix-web = "4.0.0"
actix-rt = "1.1.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
strfmt = "0.2.2"
bson = "0.14.1"
jsonwebtoken = "7.1.0"
envfile = "0.2.1"
chrono = "0.4.11"
rust-crypto = "0.2.36"
uuid = { version = "0.8", features = ["serde", "v4"] }
futures = "0.3.4"
async-trait = "0.1.57"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
sha256 = "1.0.3"
cargo-watch = "8.1.2"
async-std = { version = "1", features = ["attributes", "tokio1"] }
libc = "0.2.132"