[package]
name = "jitsi-xmpp-parsers"
description = "Provides types for non-standard XMPP elements used by Jitsi Meet"
version = "0.1.0"
edition = "2018"
license = "MPL-2.0"
readme = "../README.md"
repository = "https://github.com/avstack/gst-meet"
documentation = "https://docs.rs/jitsi-xmpp-parsers/"
authors = ["Jasper Hugo <jasper@avstack.io>"]

[dependencies]
jid = "=0.9.3"
minidom = "=0.14.0"
xmpp-parsers = "=0.19.0"

[package.metadata.docs.rs]
rustdoc-args = [ "--sort-modules-by-appearance", "-Zunstable-options" ]
